Fixed the alignment of secondary actions

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1148,6 +1148,10 @@ body.scripted .BackOfficeLayout .Table .selection {
     margin-left: 1em;
 }
 
+.BackOfficeLayout .toolbar .additional_actions_selector .action_button {
+    margin-left: 0 !important;
+}
+
 .BackOfficeLayout .toolbar a {
     text-decoration: none;
 }
